--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,30 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-label>
+    Mi proxima clase
+  </ion-label>
+    <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col col-5>
+              Lunes 9:00
+            </ion-col>
+            <ion-col col-7>
+              Funcional Intermedio
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+  <ion-list>
+    <button ion-item (click)="irAMisClases()">
+      Proximas clases
+    </button>
+    <button ion-item (click)="irAHorarios()">
+      Horarios
+    </button>
+    <button ion-item (click)="irAEventos()">
+      Eventos
+    </button>    
+  </ion-list>
 </ion-content>
